# testmaxxing

./: .gitignore  README.md  pyproject.toml  test.sh
.github/workflows/: tests.yml
tests/: com_acme_tools_Strings_normalize_GibberishTest.java  github_com_acme_pkg_Transform_gibberish_test.go  lib_strings_normalize_gibberish.test.js  test_generator.py  test_math_sqrt_gibberish.py  test_selfsplit_gibberish.py  test_testmaxxing_cli__coverage_target_from_function_path_gibberish.py  test_testmaxxing_cli_main_gibberish.py  test_testmaxxing_config_GenerationConfig_gibberish.py  test_testmaxxing_generator__infer_go_package_name_gibberish.py  test_testmaxxing_generator_build_go_test_file_gibberish.py  test_testmaxxing_generator_build_java_test_file_gibberish.py  test_testmaxxing_generator_build_javascript_test_file_gibberish.py  test_testmaxxing_generator_build_python_test_file_gibberish.py  test_testmaxxing_generator_build_test_file_gibberish.py  test_testmaxxing_generator_default_output_path_gibberish.py  test_testmaxxing_generator_split_function_path_gibberish.py  test_testmaxxing_generator_split_go_function_path_gibberish.py  test_testmaxxing_generator_split_java_function_path_gibberish.py  test_testmaxxing_generator_split_javascript_function_path_gibberish.py  test_testmaxxing_generator_write_test_file_gibberish.py  test_testmaxxing_gibberish__camelize_gibberish.py  test_testmaxxing_gibberish__pick_gibberish.py  test_testmaxxing_gibberish__safe_identifier_gibberish.py  test_testmaxxing_gibberish_random_arg_gibberish.py  test_testmaxxing_gibberish_test_comment_gibberish.py  (+1 more)
(+6 files in other folders)
